--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>this is git tutorial</h1>
     <h1>this is git tutorial</h1>
+    <h1>this is git tutorial</h1>
+    <h1>this is git tutorial</h1>
 </body>
 </html>
